# ImageProcessingIntroduction

./: .gitignore  CMakeLists.txt  README.md
data/1/: cam_74_threshold100_modified.pgm
data/3/: immed_gray_inv_20051123_dil1_modified.pgm  immed_gray_inv_20051123_dil2_modified.pgm  immed_gray_inv_20051123_ero1_modified.pgm  immed_gray_inv_20051123_ero2_modified.pgm
data/4/: immed_gray_inv_20051123_clo1_modified.pgm  immed_gray_inv_20051123_clo2_modified.pgm  immed_gray_inv_20051123_ope1_modified.pgm  immed_gray_inv_20051123_ope2_modified.pgm
data/5/: exercise_04a_output_02.pgm  exercise_04b_output_01.pgm
data/6/: exercise_06a_output_02.pgm  exercise_06b_output_01.pgm  immed_gray_inv_20051123_clo2ope2_modified.pgm  immed_gray_inv_20051123_clo4ope4_modified.pgm  immed_gray_inv_20051123_ope2clo2_modified.pgm  immed_gray_inv_20051123_ope4clo4_modified.pgm
data/8/: isn_256_closing.pgm  isn_256_closing_opening.pgm  isn_256_opening.pgm  isn_256_opening_closing.pgm
exercises/: exercise_02a_thresh.cpp  exercise_02b_compare.cpp  exercise_02c.cpp  exercise_02d_sup.cpp  exercise_03a_erosion.cpp  exercise_03b_dilation.cpp  exercise_04a_opening.cpp  exercise_04b_closing.cpp  exercise_06a_closing_opening.cpp  exercise_06b_opening_closing.cpp
src/: exercise_02a_thresh.cpp  exercise_02b_compare.cpp  exercise_02d_inf.cpp  exercise_02d_sup.cpp  exercise_03a_erosion.cpp  exercise_03b_dilation.cpp  exercise_04a_opening.cpp  exercise_04b_closing.cpp  exercise_06a_closing_opening.cpp  exercise_06b_opening_closing.cpp  exercise_08.txt  exercise_0_display.cpp
utils/: utils.hpp
